# mediasorter-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/js/mediasorter/: README.md  index.html  package.json  vite.config.ts
src/js/mediasorter/src/: App.vue  main.ts  quasar-variables.sass
src/js/mediasorter/src/assets/: main.css
src/js/mediasorter/src/components/: Drawer.vue  SourcesTable.vue  Toolbar.vue
src/js/mediasorter/src/composables/: api.ts  sorter.ts
src/js/mediasorter/src/types/: configuration.ts  index.ts
src/js/mediasorter/src/views/: Home.vue
src/python/api/: app.py
