[tool.poetry]
name = "mediasorter-server"
version = "0.1.3"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {from = "src/python", include = "api"}
]

include = [
    { path = "src/js/mediasorter/dist/*", format = ["sdist", "wheel"] },
    { path = "src/js/mediasorter/dist/assets/*", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
mediasorter-server = "api.app:main"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
multimediasorter = "^1.4.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
